--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -5,44 +5,80 @@ h1 {
 .Header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   background-color: #ffde00;
-  height: 45px;
+  margin: 0px;
+  padding: 0px;
 }
-
+.Header .logo-title {
+  display: flex;
+  align-items: center;
+  padding: 4px;
+}
 .Header .logo {
   width: 40px;
   height: 40px;
 }
+.Header .title {
+  height: 50px;
+}
 
+.Header .profile-menu {
+  display: flex;
+  align-items: center;
+}
 .Header .profile {
   display: flex;
+  align-items: center;
+  font-size: 20px;
+  padding: 8px;
 }
-
 .Header .avatar {
-  width: 45px;
-  height: 45px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
 }
-
+.fa-bars {
+  font-size: 47px;
+  margin: 18px;
+}
 .dropdown {
   position: relative;
   display: inline-block;
 }
 .drop-content a {
-  padding: 12px 16px;
+  padding: 14px;
+  margin: 16px;
   text-decoration: none;
+  border-bottom: solid #fff8dc 1px;
+  color: black;
   display: block;
+}
+.drop-content a:hover {
+  color: #fff8dc;
+}
+.drop-content button {
+  padding: 4px;
+  font-weight: bold;
+  border: solid black 1px;
 }
 
 .Header .drop-content {
   display: none;
   position: absolute;
-  background-color: yellow;
+  background-color: #0075be;
   right: 0;
+}
+
+.dropdown:hover {
+  background-color: #0075be;
+  color: #fff8dc;
 }
 
 .dropdown:hover .drop-content {
   display: block;
   position: absolute;
   float: inline-end;
+  width: 180px;
+  padding: 10px;
 }
