--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -38,13 +38,15 @@ h1 {
   height: 50px;
   border-radius: 50%;
 }
-.fa-bars {
-  font-size: 47px;
-  margin: 18px;
-}
 .dropdown {
   position: relative;
   display: inline-block;
+  transition-property: background-color;
+  transition-duration: 1s;
+}
+.fa-bars {
+  font-size: 47px;
+  margin: 18px;
 }
 .drop-content a {
   padding: 14px;
@@ -67,7 +69,10 @@ h1 {
   display: none;
   position: absolute;
   background-color: #0075be;
+  height: 0px;
   right: 0;
+  transition-property: height;
+  transition-duration: 1s;
 }
 
 .dropdown:hover {
@@ -79,6 +84,7 @@ h1 {
   display: block;
   position: absolute;
   float: inline-end;
+  height: fit-content;
   width: 180px;
   padding: 10px;
 }
