--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -51,8 +51,13 @@ p {
   display: none;
   padding: 4px;
   font-weight: bold;
-  background-color: #0075be;
+  background-color: #3b4cca;
   border: none;
+  border: 2px solid black;
+  border-radius: 0.5rem 0.5rem 0.5rem 0.5rem;
+  color: #ffde00;
+  margin: 1.5em;
+  box-shadow: 0em 0.6em black, 0 0.9em rgba(0, 0, 0, 0.4);
 }
 
 .Header .desktop-content {
@@ -80,7 +85,7 @@ p {
 
 @media only screen and (max-width: 1000px) {
   .Header {
-    background-color: lightblue;
+    background-color: #ffde00;
   }
   .title {
     display: none;
@@ -121,13 +126,23 @@ p {
     color: #fff8dc;
   }
   .mobile-content {
+    margin-top: 10px;
     display: block;
     position: absolute;
     float: inline-end;
     height: fit-content;
-    background-color: #0075be;
+    background-color: #3b4cca;
     width: 180px;
     padding: 10px;
     right: 0;
+    border-radius: 0.5rem;
+    border: 2px solid #ffde00;
+  }
+
+  .Header .burger:active {
+    background: #3b4cca;
+    color: #ffde00;
+    box-shadow: none;
+    transform: translateY(0.6em);
   }
 }
