--- a/src/components/Homepage.css
+++ b/src/components/Homepage.css
@@ -21,3 +21,78 @@
 .Homepage .quiz-container :hover {
   transform: rotateY(180deg);
 }
+
+.flip-card {
+  background-color: transparent;
+  width: 216px;
+  height: 300px;
+  perspective: 1000px;
+}
+
+.Homepage .flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 1.2);
+  border-radius: 11px;
+}
+
+.Homepage .flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.Homepage .flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.Homepage .flip-card-front {
+  background-color: #bbb;
+  color: black;
+  border-radius: 11px;
+}
+
+.Homepage .flip-card-back {
+  background-color: #cc0000;
+  color: black;
+  transform: rotateY(180deg);
+  border-radius: 11px;
+}
+
+.Homepage h3 {
+  background-color: white;
+  height: 3em;
+  margin: 0;
+  justify-content: center;
+  padding: 20px;
+  border-radius: 11px 11px 0px 0px;
+}
+
+.Homepage img {
+  height: 100%;
+  border-radius: 11px;
+}
+.Homepage button {
+  padding: 4px;
+  font-weight: bold;
+  background-color: white;
+  border: none;
+  border: 2px solid black;
+  border-radius: 0.5rem 0.5rem 0.5rem 0.5rem;
+  color: black;
+  margin: 1.5em;
+  box-shadow: 0em 0.6em black, 0 0.9em rgba(0, 0, 0, 0.4);
+}
+.Homepage button:active {
+  background: black;
+  color: white;
+  box-shadow: none;
+  transform: translateY(0.6em);
+}
