--- a/src/components/Quiz.css
+++ b/src/components/Quiz.css
@@ -23,22 +23,23 @@
   border-radius: 11px;
 } */
 
-.Quiz button {
-  color: #ffde00;
-  font-family: "Montserrat", sans-serif;
-  text-transform: uppercase;
-  text-decoration: none;
-  margin: 1rem;
-  padding: 0.5rem;
-  border: 2px solid #ffde00;
-  border-radius: 0.5rem;
+.Quiz .quit-button {
+  padding: 4px;
+  font-weight: bold;
   background-color: #3b4cca;
+  border: none;
+  border: 2px solid black;
+  border-radius: 0.5rem 0.5rem 0.5rem 0.5rem;
+  color: #ffde00;
+  margin: 1.5em;
+  box-shadow: 0em 0.6em black, 0 0.9em rgba(0, 0, 0, 0.4);
 }
 
-.Quiz button:hover {
-  background: #e5dc15;
-  color: #0e79b2;
-  box-shadow: 0 0.6em #c2bb11, 0 0.9em rgba(0, 0, 0, 0.4);
+.Quiz .quit-button:active {
+  background: #3b4cca;
+  color: #ffde00;
+  box-shadow: none;
+  transform: translateY(0.6em);
 }
 
 input[type="text"] {
@@ -46,7 +47,11 @@ input[type="text"] {
   border-radius: 4px 0px 0px 4px;
 }
 
-.Quiz #I-dont-know-button {
+input:focus {
+  outline: none;
+}
+
+.Quiz .I-dont-know-button {
   border-radius: 0px 4px 4px 0px;
   background-color: #cc0000;
   border: black 1px solid;
