--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -107,7 +107,7 @@ p {
   transform: translateY(0.6em);
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 800px) {
   .Header {
     background-color: #ffde00;
   }
@@ -130,6 +130,7 @@ p {
     display: inline-block;
     transition-property: background-color;
     transition-duration: 1s;
+    z-index: 2;
   }
   .fa-bars {
     font-size: 47px;
