--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -16,9 +16,9 @@ p {
 .Header .logo-title {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
   align-items: center;
   padding: 4px;
+  margin-left: 15px;
   max-width: 400px;
 }
 .Header .logo {
@@ -71,7 +71,7 @@ p {
   align-items: center;
   font-weight: bold;
   color: black;
-  border-right: solid black 1px;
+  margin-right: 15px;
 }
 
 .Header .desktop-content a,
