--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -158,3 +158,9 @@
   top: 0;
   z-index: 2;
 }
+
+@media only screen and (max-width: 650px) {
+  .Profile .delete-button {
+    margin-left: 48%;
+  }
+}
