--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -36,14 +36,13 @@
   font-weight: bold;
   background-color: #cc0000;
   border: none;
+  border: 2px solid black;
   border-radius: 0rem 0rem 0.5rem 0.5rem;
   color: cornsilk;
+  box-shadow: 0em 0em black, 0 0 rgba(0, 0, 0, 0);
   margin-left: 20em;
   border-top: 0px black solid;
   transform: translateY(0.6em);
-  box-shadow: 0em 0em black, 0 0em rgba(0, 0, 0, 0.4);
-  border-top: 0px black solid;
-  border: 2px solid black;
 }
 
 .Profile .yes-button {
@@ -144,6 +143,8 @@
 .Profile .are-you-sure-text {
   padding: 10px;
   background-color: white;
+  /* width: 100%; */
+  width: 301px;
   height: fit-content;
   border-radius: 15.5px 15.5px 0px 0px;
   border-bottom: black 5px solid;
@@ -157,10 +158,4 @@
   left: 0;
   top: 0;
   z-index: 2;
-}
-
-@media only screen and (max-width: 650px) {
-  .Profile .delete-button {
-    margin-left: 48%;
-  }
 }
