--- a/src/components/GenerationPicker.css
+++ b/src/components/GenerationPicker.css
@@ -3,7 +3,7 @@
   margin: 0px;
   padding: 0px;
   color: cornsilk;
-  font-size: 24px;
+  font-size: 22px;
 }
 
 .GenerationPicker .start-button {
@@ -28,11 +28,20 @@
   justify-content: center;
   align-items: center;
 }
+
+.gen-box-container:hover {
+  cursor: pointer;
+  color: #3b4cca;
+}
+
 .gen-box {
   height: 0px;
   width: 0px;
 }
 .new-checkbox {
-  height: 32px;
+  height: 20px;
   padding-right: 8px;
+  font-size: 16px;
 }
+
+  
